--- a/_notebooks/2020-05-03-multi-model.ipynb
+++ b/_notebooks/2020-05-03-multi-model.ipynb
@@ -10,7 +10,7 @@
     "- toc: true \n",
     "- badges: false\n",
     "- comments: true\n",
-    "- categories: [jupyter, metadata, ultimodal]\n"
+    "- categories: [metadata, multi-model]\n"
    ]
   },
   {
