--- a/_notebooks/2020-05-03-multi-model.ipynb
+++ b/_notebooks/2020-05-03-multi-model.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Multi-model metadata generation\n",
-    "> combining text and tabular models to generate web archive metadata\n",
+    "> experiment in combining text and tabular models to generate web archive metadata\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
@@ -23,12 +23,12 @@
     "\n",
     "Recently I have been playing around with a Website Classification Dataset from the UK web archive. The dataset is derived from a manually curated web archive which contains a primary and secondary category for each web page. The UK web archive has made a [dataset](https://data.webarchive.org.uk/opendata/ukwa.ds.1/classification/) available based on this archive which contains the manually classified subject categories alongside the page URL and the page title. \n",
     "\n",
-    "As part of playing around with this dataset I was keen to see if a multi-input model would work well. In this case exploring a model that takes both text and tabular data as input. "
+    "As part of playing around with this dataset I was keen to see if a multi-input model would work well. In this case exploring a model that takes both text and tabular data as input. A preview of the data: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Primary Category</th>\n",
        "      <th>Secondary Category</th>\n",
        "      <th>Title</th>\n",
@@ -62,7 +61,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Arts &amp; Humanities</td>\n",
        "      <td>Architecture</td>\n",
        "      <td>68 Dean Street</td>\n",
@@ -70,7 +68,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Arts &amp; Humanities</td>\n",
        "      <td>Architecture</td>\n",
        "      <td>Abandoned Communities</td>\n",
@@ -78,7 +75,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Arts &amp; Humanities</td>\n",
        "      <td>Architecture</td>\n",
        "      <td>Alexander Thomson Society</td>\n",
@@ -86,7 +82,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Arts &amp; Humanities</td>\n",
        "      <td>Architecture</td>\n",
        "      <td>Arab British Centre, The</td>\n",
@@ -94,7 +89,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Arts &amp; Humanities</td>\n",
        "      <td>Architecture</td>\n",
        "      <td>Architectural Association School of Architecture</td>\n",
@@ -105,12 +99,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0   Primary Category Secondary Category  \\\n",
-       "0           0  Arts & Humanities       Architecture   \n",
-       "1           1  Arts & Humanities       Architecture   \n",
-       "2           2  Arts & Humanities       Architecture   \n",
-       "3           3  Arts & Humanities       Architecture   \n",
-       "4           4  Arts & Humanities       Architecture   \n",
+       "    Primary Category Secondary Category  \\\n",
+       "0  Arts & Humanities       Architecture   \n",
+       "1  Arts & Humanities       Architecture   \n",
+       "2  Arts & Humanities       Architecture   \n",
+       "3  Arts & Humanities       Architecture   \n",
+       "4  Arts & Humanities       Architecture   \n",
        "\n",
        "                                              Title  \\\n",
        "0                                    68 Dean Street   \n",
@@ -127,7 +121,7 @@
        "4              http://www.aaschool.ac.uk/  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +130,7 @@
     "#hide_input\n",
     "import pandas as pd\n",
     "tsv ='https://gist.githubusercontent.com/davanstrien/5e22b725046eddc2f1ee06b108f27e48/raw/71426e6b92c7fa98140a95728a5ea55171b948cd/classification.tsv'\n",
-    "df = pd.read_csv(tsv, error_bad_lines=False, index_col=None)\n",
+    "df = pd.read_csv(tsv, error_bad_lines=False, index_col=0)\n",
     "df.head()"
    ]
   },
@@ -147,7 +141,7 @@
     "Based on this data the UK web archive are interested: \n",
     ">\"in understanding whether high-level metadata like this can be used to train an appropriate automatic classification system so that we might use this manually generated dataset to partially automate the categorisation of our larger archives.\"\n",
     "\n",
-    "This is going to be fairly tricky but offers an excuse to try to use models with multiple inputs to predict our categories."
+    "This is going to be fairly tricky but offers a nice excuse to try to use models with multiple inputs to predict our categories."
    ]
   },
   {
@@ -170,8 +164,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unique primary categories "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +181,20 @@
        "24"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(df['Primary Category'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unique secondary categories "
    ]
   },
   {
@@ -484,7 +492,7 @@
     "\n",
     "### SentencePiece tokenization\n",
     "\n",
-    "By default fastai uses SpaCy to do tokenization with a few additional special tokens added by fastai. I wanted to see if using [sentencepiece](https://github.com/google/sentencepiece) would work better for processing title fields. SentencePiece allows for various sub-word tokeinzation. This can be useful for agglutinative languages but could also be useful when you have a lot of out of vocabulary words in your corpus. I wanted to see if this also was useful for processing titles since these may contain domain specific terms. I only tried using SentencePiece with 'unigram' tokenization. The best score I got for this was:\n",
+    "By default fastai uses SpaCy to do tokenization with a few additional special tokens added by fastai. I wanted to see if using [sentencePiece](https://github.com/google/sentencepiece) would work better for processing title fields. SentencePiece allows for various sub-word tokeinzation. This can be useful for agglutinative languages but could also be useful when you have a lot of out of vocabulary words in your corpus. I wanted to see if this also was useful for processing titles since these may contain domain specific terms. I only tried using SentencePiece with 'unigram' tokenization. The best score I got for this was:\n",
     "\n",
     "```Better model found at epoch 1 with f_beta value: 0.21195338666439056.``` \n",
     "### Default SpaCy tokenization\n",
