include in search

--- a/_notebooks/2020-05-03-multi-model.ipynb
+++ b/_notebooks/2020-05-03-multi-model.ipynb
@@ -10,7 +10,8 @@
     "- toc: true \n",
     "- badges: false\n",
     "- comments: true\n",
-    "- categories: [metadata, multi-model]\n"
+    "- categories: [metadata, multi-model]\n",
+    "- search_exclude: false\n"
    ]
   },
   {
