include in search

--- a/_notebooks/2020-05-03-multi-model.ipynb
+++ b/_notebooks/2020-05-03-multi-model.ipynb
@@ -11,7 +11,7 @@
     "- badges: false\n",
     "- comments: true\n",
     "- categories: [metadata, multi-model]\n",
-    "- search_exclude: false\n"
+    "- search_exclude: true\n"
    ]
   },
   {
