add image to optuna post

--- a/_notebooks/optuna.ipynb
+++ b/_notebooks/optuna.ipynb
@@ -14,7 +14,8 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [Hyperparameter optimisation, optimisation, optuna, fastai2, transfer learning]\n",
-    "- search_exclude: false"
+    "- search_exclude: false\n",
+    "- image: images/optuna.png"
    ]
   },
   {
