--- a/_posts/2020-06-11-optuna.md
+++ b/_posts/2020-06-11-optuna.md
@@ -7,6 +7,7 @@ badges: true
 comments: true
 categories: [Hyperparameter optimisation, optimisation, optuna, fastai2, transfer learning]
 search_exclude: false
+image: images/optuna.png
 nb_path: _notebooks/optuna.ipynb
 layout: notebook
 ---
