--- a/_notebooks/2020-10-12-labelling_vs_classification_models.ipynb
+++ b/_notebooks/2020-10-12-labelling_vs_classification_models.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "### Sorting through family photos \n",
     "\n",
-    "We can use an analogy to illustrate the difference between these two approaches. Let's say you were sorting through some old family photographs. You might \"classify\" the photos into one (and only one) of two photo albums, depending on whether they are black-and-white or colour.  This would be comparable to using a classification model since each photo will go into exactly one of these two albums - a photo cannot be both simultaneously colour *and* black-and-white, and it can be neither colour *nor* black-and-white.\n",
+    "We can use an analogy to illustrate the difference between these two approaches. Let's say you were sorting through some old family photographs. You might \"classify\" the photos into one (and only one) of two photo albums, depending on whether they are black-and-white or colour.  This would be comparable to using a classification model since each photo will go into exactly one of these two albums - a photo cannot be both simultaneously colour *and* black-and-white, and it cannot be neither colour *nor* black-and-white.\n",
     "\n",
     "You may at the same time also want to make it easier to find photos of particular people in your family. You could do this by assigning labels to each photo, indicating or \"tagging\" the family members who appear in the photo. In this case, a photo may have one label (a photo of your sister), more than one label (a photo of your sister *and* aunt), or it may have no labels (a photograph of a landscape taken on a holiday). This would be analogous to a multi-label classification model. \n",
     "\n",
