add section on flyswot

--- a/_posts/2021-12-22-flyswot.md
+++ b/_posts/2021-12-22-flyswot.md
@@ -27,7 +27,11 @@ The desire of this project is to be able to use a computer vision model to check
 - related to the above, the approach to annotation has to be pragmatic - no Mechanical Turk here
 - the machine learning should fit into existing workflows (this is something we have/are spending a lot of time on)
 
-Since this is intended to be a tl;dr I won't go into more detail here. 
+Since this is intended to be a tl;dr I won't go into more detail here about all of these requirements here. 
+
+## flyswot 
+
+The approach we ended up with is to deploy a model using a command line tool that we've called `flyswot`. This tool can be pointed at a directory and it will recursively check for images which contain the `fse` pattern in the filename. These images are then checked using a computer vision model that looks check whether an image is a 'real' flysheet or a 'fake' flysheet. 
 
 ## What I have learned (so far)
 
