--- a/_notebooks/2021-12-30-hf-hub-model-storage.ipynb
+++ b/_notebooks/2021-12-30-hf-hub-model-storage.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Using the 🤗 Hub for model storage\n",
-    "> How I'm planning to use the 🤗 hub for storing flyswot models  \n",
+    "> How I'm planning to use the huggingface hub for storing flyswot models  \n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
     "- comments: true\n",
-    "- categories: [metadata, deployment]\n",
+    "- categories: [metadata, deployment,huggingface, flyswot]\n",
     "- search_exclude: false"
    ]
   },
