add flyswot tag

--- a/_posts/2021-12-22-flyswot.md
+++ b/_posts/2021-12-22-flyswot.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: Attempting to deploy machine learning in an existing workflow 
-categories: [deployment, glam, 🤗]
+categories: [deployment, glam, flyswot]
 title: "flyswot"
 ---
 
