--- a/_notebooks/2022-06-20-dask-and-datasets.ipynb
+++ b/_notebooks/2022-06-20-dask-and-datasets.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 97,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "# collapse_show\n",
+    "# collapse_hide\n",
     "\n",
     "frequencies(dates)"
    ]
