--- a/_notebooks/2022-06-20-dask-and-datasets.ipynb
+++ b/_notebooks/2022-06-20-dask-and-datasets.ipynb
@@ -13,7 +13,8 @@
     "- comments: true\n",
     "- categories: [huggingface, huggingface-datasets, dask]\n",
     "- search_exclude: false\n",
-    "- badges: true"
+    "- badges: true\n",
+    "- image: images/dask_plot_example.png"
    ]
   },
   {
