--- a/_notebooks/2022-07-26-semantic-search-ml-models.ipynb
+++ b/_notebooks/2022-07-26-semantic-search-ml-models.ipynb
@@ -3243,7 +3243,7 @@
    "source": [
     "### Searching \n",
     "\n",
-    "Being able to find similar README's is a start but we actually wanted to be able to search directly. Let's see how our results do if we instead search for some terms we might use to try and find suitable models. "
+    "Being able to find similar model cards is a start but we actually wanted to be able to search directly. Let's see how our results do if we instead search for some terms we might use to try and find suitable models. "
    ]
   },
   {
