--- a/_notebooks/2022-07-26-semantic-search-ml-models.ipynb
+++ b/_notebooks/2022-07-26-semantic-search-ml-models.ipynb
@@ -17,7 +17,7 @@
     "- categories: [huggingface, huggingface-datasets, semantic-search]\n",
     "- search_exclude: false\n",
     "- badges: true\n",
-    "- image: ../images/hub_model_search.png"
+    "- image: ../images/hub_model_search.webp"
    ]
   },
   {
