--- a/_notebooks/2022-08-16-detr-object-detection.ipynb
+++ b/_notebooks/2022-08-16-detr-object-detection.ipynb
@@ -14,7 +14,7 @@
     "- categories: [huggingface, huggingface-datasets, transformers]\n",
     "- search_exclude: false\n",
     "- badges: true\n",
-    "- image: "
+    "- image: https://raw.githubusercontent.com/davanstrien/blog/4100b7d4db7def820bde7930934f1094af87accf/images/detr_model_output.webp "
    ]
   },
   {
