--- a/_notebooks/2022-08-16-detr-object-detection.ipynb
+++ b/_notebooks/2022-08-16-detr-object-detection.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Training a Detr object detection model using Hugging Face transformers and datasets \n",
     "\n",
-    "The Hugging Face [transfromers](https://huggingface.co/docs/transformers/index) library has increasingly expanded from its original focus on Natural Language Processing tasks to include more models covering a range of computer vision tasks. This blog post will look at how we can train an object detection model using the Hugging Face transformers and datasets libraries. \n",
+    "The Hugging Face [transformers](https://huggingface.co/docs/transformers/index) library has increasingly expanded from its original focus on Natural Language Processing tasks to include more models covering a range of computer vision tasks. This blog post will look at how we can train an object detection model using the Hugging Face transformers and datasets libraries. \n",
     "\n",
     "## What is object detection? \n",
     "\n",
@@ -175,7 +175,7 @@
    "source": [
     "## Loading the dataset\n",
     "\n",
-    "In this blog post will use a dataset being added to the Hugging Face datasets hub as part of the [BigLAM](https://github.com/bigscience-workshop/lam) hackathon. This dataset has a configuration for object detection and image classification, so we'll need to specify which one we want. Since the datase doesn't define train/test/valid splits for us, we'll grab the training split. I won't provide a full description of the dataset in this blog post since the dataset is still in the process of being documented. The tl;dr summary is that the dataset includes images of digitised books with bounding boxes for illustrations. "
+    "In this blog post will use a dataset being added to the Hugging Face datasets hub as part of the [BigLAM](https://github.com/bigscience-workshop/lam) hackathon. This dataset has a configuration for object detection and image classification, so we'll need to specify which one we want. Since the dataset doesn't define train/test/valid splits for us, we'll grab the training split. I won't provide a full description of the dataset in this blog post since the dataset is still in the process of being documented. The tl;dr summary is that the dataset includes images of digitized books with bounding boxes for illustrations. "
    ]
   },
   {
@@ -2811,7 +2811,7 @@
     }
    ],
    "source": [
-    "# collapse\n",
+    "#collapse\n",
     "trainer.train()"
    ]
   },
