fix to collate_fn

--- a/_notebooks/2022-08-16-detr-object-detection.ipynb
+++ b/_notebooks/2022-08-16-detr-object-detection.ipynb
@@ -1629,6 +1629,7 @@
     "    )\n",
     "    labels = [item[\"labels\"] for item in batch]\n",
     "    batch = {}\n",
+    "    batch['pixel_values'] = encoding['pixel_values']\n",
     "    batch[\"pixel_mask\"] = encoding[\"pixel_mask\"]\n",
     "    batch[\"labels\"] = labels\n",
     "    return batch"
