add preview image

--- a/_notebooks/2023-03-07-readme-template.ipynb
+++ b/_notebooks/2023-03-07-readme-template.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -12,7 +13,8 @@
     "- badges: false\n",
     "- comments: true\n",
     "- categories: [metadata, huggingface,]\n",
-    "- search_exclude: false\n"
+    "- search_exclude: false\n",
+    "- image: https://github.com/davanstrien/blog/raw/master/images/_readme_auto_generate/preview.png"
    ]
   },
   {
