--- a/_notebooks/2023-11-08-datasets_to_qdrant.ipynb
+++ b/_notebooks/2023-11-08-datasets_to_qdrant.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -30,102 +30,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting datasets\n",
-            "  Downloading datasets-2.14.6-py3-none-any.whl (493 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m493.7/493.7 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hCollecting qdrant-client\n",
-            "  Downloading qdrant_client-1.6.4-py3-none-any.whl (181 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m181.3/181.3 kB\u001b[0m \u001b[31m14.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: pyyaml>=5.1 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (6.0)\n",
-            "Requirement already satisfied: tqdm>=4.62.1 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (4.64.1)\n",
-            "Requirement already satisfied: pandas in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (1.5.2)\n",
-            "Requirement already satisfied: packaging in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (23.0)\n",
-            "Collecting xxhash\n",
-            "  Downloading xxhash-3.4.1-cp310-cp310-macosx_11_0_arm64.whl (30 kB)\n",
-            "Collecting aiohttp\n",
-            "  Downloading aiohttp-3.8.6-cp310-cp310-macosx_11_0_arm64.whl (347 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m347.7/347.7 kB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting dill<0.3.8,>=0.3.0\n",
-            "  Using cached dill-0.3.7-py3-none-any.whl (115 kB)\n",
-            "Collecting pyarrow>=8.0.0\n",
-            "  Downloading pyarrow-14.0.0-cp310-cp310-macosx_11_0_arm64.whl (24.0 MB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.0/24.0 MB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hCollecting fsspec[http]<=2023.10.0,>=2023.1.0\n",
-            "  Downloading fsspec-2023.10.0-py3-none-any.whl (166 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m166.4/166.4 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting huggingface-hub<1.0.0,>=0.14.0\n",
-            "  Using cached huggingface_hub-0.18.0-py3-none-any.whl (301 kB)\n",
-            "Requirement already satisfied: requests>=2.19.0 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (2.28.2)\n",
-            "Requirement already satisfied: numpy>=1.17 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from datasets) (1.24.1)\n",
-            "Collecting multiprocess\n",
-            "  Using cached multiprocess-0.70.15-py310-none-any.whl (134 kB)\n",
-            "Collecting grpcio>=1.41.0\n",
-            "  Downloading grpcio-1.59.2-cp310-cp310-macosx_12_0_universal2.whl (9.5 MB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
-            "\u001b[?25hCollecting portalocker<3.0.0,>=2.7.0\n",
-            "  Downloading portalocker-2.8.2-py3-none-any.whl (17 kB)\n",
-            "Collecting pydantic>=1.10.8\n",
-            "  Using cached pydantic-2.4.2-py3-none-any.whl (395 kB)\n",
-            "Collecting httpx[http2]>=0.14.0\n",
-            "  Downloading httpx-0.25.1-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.0/75.0 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting grpcio-tools>=1.41.0\n",
-            "  Downloading grpcio_tools-1.59.2-cp310-cp310-macosx_12_0_universal2.whl (4.9 MB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: urllib3<2.0.0,>=1.26.14 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from qdrant-client) (1.26.14)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from aiohttp->datasets) (22.2.0)\n",
-            "Collecting multidict<7.0,>=4.5\n",
-            "  Using cached multidict-6.0.4-cp310-cp310-macosx_11_0_arm64.whl (29 kB)\n",
-            "Collecting async-timeout<5.0,>=4.0.0a3\n",
-            "  Using cached async_timeout-4.0.3-py3-none-any.whl (5.7 kB)\n",
-            "Collecting aiosignal>=1.1.2\n",
-            "  Using cached aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
-            "Collecting frozenlist>=1.1.1\n",
-            "  Using cached frozenlist-1.4.0-cp310-cp310-macosx_11_0_arm64.whl (46 kB)\n",
-            "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from aiohttp->datasets) (3.0.1)\n",
-            "Collecting yarl<2.0,>=1.0\n",
-            "  Using cached yarl-1.9.2-cp310-cp310-macosx_11_0_arm64.whl (62 kB)\n",
-            "Collecting protobuf<5.0dev,>=4.21.6\n",
-            "  Downloading protobuf-4.25.0-cp37-abi3-macosx_10_9_universal2.whl (393 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m393.9/393.9 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: setuptools in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from grpcio-tools>=1.41.0->qdrant-client) (65.5.1)\n",
-            "Requirement already satisfied: anyio in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (3.6.2)\n",
-            "Requirement already satisfied: sniffio in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (1.3.0)\n",
-            "Requirement already satisfied: certifi in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (2022.12.7)\n",
-            "Collecting httpcore\n",
-            "  Downloading httpcore-1.0.1-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: idna in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (3.4)\n",
-            "Collecting h2<5,>=3\n",
-            "  Using cached h2-4.1.0-py3-none-any.whl (57 kB)\n",
-            "Requirement already satisfied: filelock in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (3.9.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (4.4.0)\n",
-            "Collecting annotated-types>=0.4.0\n",
-            "  Using cached annotated_types-0.6.0-py3-none-any.whl (12 kB)\n",
-            "Collecting typing-extensions>=3.7.4.3\n",
-            "  Using cached typing_extensions-4.8.0-py3-none-any.whl (31 kB)\n",
-            "Collecting pydantic-core==2.10.1\n",
-            "  Downloading pydantic_core-2.10.1-cp310-cp310-macosx_11_0_arm64.whl (1.7 MB)\n",
-            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m12.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: pytz>=2020.1 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from pandas->datasets) (2022.7.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from pandas->datasets) (2.8.2)\n",
-            "Collecting hyperframe<7,>=6.0\n",
-            "  Using cached hyperframe-6.0.1-py3-none-any.whl (12 kB)\n",
-            "Collecting hpack<5,>=4.0\n",
-            "  Using cached hpack-4.0.0-py3-none-any.whl (32 kB)\n",
-            "Requirement already satisfied: six>=1.5 in /Users/davanstrien/Documents/daniel/blog/venv/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-            "Collecting h11<0.15,>=0.13\n",
-            "  Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "Installing collected packages: xxhash, typing-extensions, pyarrow, protobuf, portalocker, multidict, hyperframe, hpack, h11, grpcio, fsspec, frozenlist, dill, async-timeout, annotated-types, yarl, pydantic-core, multiprocess, huggingface-hub, httpcore, h2, grpcio-tools, aiosignal, pydantic, httpx, aiohttp, qdrant-client, datasets\n",
-            "  Attempting uninstall: typing-extensions\n",
-            "    Found existing installation: typing_extensions 4.4.0\n",
-            "    Uninstalling typing_extensions-4.4.0:\n",
-            "      Successfully uninstalled typing_extensions-4.4.0\n",
-            "  Attempting uninstall: huggingface-hub\n",
-            "    Found existing installation: huggingface-hub 0.11.1\n",
-            "    Uninstalling huggingface-hub-0.11.1:\n",
-            "      Successfully uninstalled huggingface-hub-0.11.1\n",
-            "Successfully installed aiohttp-3.8.6 aiosignal-1.3.1 annotated-types-0.6.0 async-timeout-4.0.3 datasets-2.14.6 dill-0.3.7 frozenlist-1.4.0 fsspec-2023.10.0 grpcio-1.59.2 grpcio-tools-1.59.2 h11-0.14.0 h2-4.1.0 hpack-4.0.0 httpcore-1.0.1 httpx-0.25.1 huggingface-hub-0.18.0 hyperframe-6.0.1 multidict-6.0.4 multiprocess-0.70.15 portalocker-2.8.2 protobuf-4.25.0 pyarrow-14.0.0 pydantic-2.4.2 pydantic-core-2.10.1 qdrant-client-1.6.4 typing-extensions-4.8.0 xxhash-3.4.1 yarl-1.9.2\n",
             "\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
@@ -134,7 +38,7 @@
         }
       ],
       "source": [
-        "%pip install datasets qdrant-client"
+        "%pip install datasets qdrant-client --q"
       ]
     },
     {
