--- a/posts/post-with-code/langfuse-tracing/Langfuse_+_HF_inference_endpoints.ipynb
+++ b/posts/post-with-code/langfuse-tracing/Langfuse_+_HF_inference_endpoints.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,13 +29,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "/Users/davanstrien/Documents/daniel/new_blog/.venv/bin/python: No module named pip\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
       "source": [
-        "%pip install openai langfuse"
+        "%pip install openai langfuse --quiet"
       ]
     },
     {
@@ -48,15 +47,6 @@
         "LANGFUSE_HOST=\"https://cloud.langfuse.com\" # 🇪🇺 EU region\n",
         "```"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KotJQLmSzWKQ"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -188,7 +178,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.0"
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
