update colab link and add image

--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -9,10 +9,17 @@
     "description: \"Using an open VLM to generate queries for a multimodal retrieval model\"\n",
     "author: \"Daniel van Strien\"\n",
     "date: \"2024-09-23\"\n",
-    "image: TODO\n",
+    "image: doc.png\n",
     "toc: true\n",
     "toc-depth: 3\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/davanstrien/blog/blob/main/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb)"
    ]
   },
   {
