--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generating a dataset of queries for training and fine-tuning ColPali models\"\n",
+    "title: \"Generating a dataset of queries for training and fine-tuning ColPali models on a UFO dataset\"\n",
     "description: \"Using an open VLM to generate queries for a multimodal retrieval model\"\n",
     "author: \"Daniel van Strien\"\n",
     "date: \"2024-09-23\"\n",
