--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -9,7 +9,7 @@
     "description: \"Using an open VLM to generate queries for a multimodal retrieval model\"\n",
     "author: \"Daniel van Strien\"\n",
     "date: \"2024-09-23\"\n",
-    "image: colpali/cJkPlaOVIju5yR7TaO0fD.png\n",
+    "image: cJkPlaOVIju5yR7TaO0fD.png\n",
     "toc: true\n",
     "toc-depth: 3\n",
     "---"
