--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -28,6 +28,8 @@
    "source": [
     "## Introduction to ColPali\n",
     "\n",
+    "tl;dr this blog post covers how to generate a dataset for training/fine-tuning ColPali models an open VLM to generate queries. You can find the dataset produced by this approach [here](https://huggingface.co/datasets/davanstrien/ufo-ColPali).\n",
+    "\n",
     "ColPali is a new multimodal approach to retrieval which aims to replace existing document retrievers which often rely on an OCR step with an end-to-end multimodal approach. This approach also aims to take into account the visual content and layout of the documents, in addition to the textual content. Looking at an example of a document:\n",
     "\n",
     "![](doc.png)\n",
