--- a/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
+++ b/posts/post-with-code/colpali/2024-09-23-generate_colpali_dataset.ipynb
@@ -710,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building Copali queries\n",
+    "## Building Colpali queries\n",
     "\n",
     "We now have a sense of how to generate responses using both a text and image input using the Qwen2-VL-7B-Instruct model. We'll now use this model to generate queries for our UFO dataset. To start, let's see how the prompt from the paper looks. The only thing we modified from the original prompt was to ask for JSON output rather than dictionaries since this model seemed to work better with this approach in my (somewhat limited) testing. "
    ]
